Fix z-index of header bar causing overlap w/ dialogs

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -2202,7 +2202,7 @@ div.detail-group.actions td {
   width: 100%;
   height: 117px;
   background: url(../images/overlay-pattern.png) repeat 0, #1B5070 url(../images/header-gradient.png) no-repeat center;
-  z-index: 10000;
+  z-index: 100;
   background-size: auto, cover;
   position: relative;
 }
